fixed card height and text-overflow issue

--- a/m4d2-homework/src/components/LatestReleaseFantasy.css
+++ b/m4d2-homework/src/components/LatestReleaseFantasy.css
@@ -3,9 +3,12 @@ img{
 }
 
 #bookTitle{
-    text-overflow: ellipsis !important;
+    /* remember this combination */
+    overflow: hidden;
+    white-space:nowrap;
+    text-overflow: ellipsis;
 }
 
 .wholeCard{
-    min-height: 70vh;
+    height: 25rem;
 }
